# ontology-time-machine

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pytest.yml
experiments/: aggregate_results.py  aggregate_results_NIRcheck.py  archivo_ontologies.txt  download_ontologies.py  download_ontologies_proxy.py  parse_ontologies.py  transform_json.py
experiments/downloads/: download_log.json
ontologytimemachine/: custom_proxy.py  proxy.py  proxy_wrapper.py
ontologytimemachine/utils/: config.py  dependency.ttl  download_archivo_urls.py  mock_responses.py  proxy_logic.py  utils.py
tests/: archivo_ontologies_test.txt  archivo_test_IRIs.tsv  non_archivo_test_IRIs.tsv  oldtest_integration.py  proxy_tests.py  test_config.py  test_integration.py  test_mock_responses.py  test_proxy.py  test_proxy_auth_header.py  test_proxy_auth_header_archivo.py  test_proxy_auth_header_non_archivo.py  test_proxy_logic.py  test_proxy_new.py  test_proxypy.py  test_proxypy_embedded.py  test_tsv.py  test_unit.py  test_utils.py
tests/transparent-setup/: 3proxy-CONNECT.cfg  3proxy-Dockerfile-full  3proxy-HTTP.cfg  3proxy-TLS.cfg  add-cert-pre-entrypoint.sh  docker-compose.yml
